--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
-flask==2.3.3
+flask==2.2.5
 flask-cors==4.0.0
 pydub==0.25.1
 openpyxl==3.1.2
-librosa==0.10.1
+librosa==0.8.1
 soundfile==0.12.1
+spleeter==2.2.2
+madmom==0.16.1
