--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,19 @@
-flask==2.2.5
-flask-cors==4.0.0
+# Core libraries
+Flask==2.0.1
+Flask-CORS==3.0.10
+Werkzeug==2.0.1
+gunicorn==20.1.0
+
+# Audio processing - maintain all libraries
 pydub==0.25.1
-openpyxl==3.1.2
-librosa==0.8.1
-soundfile==0.12.1
-spleeter==2.2.2
-madmom==0.16.1
+librosa==0.9.2
+numpy==1.22.3
+soundfile==0.10.3.post1
+mutagen==1.45.1
+
+# File handling
+Pillow==9.0.1
+
+# Utilities
+python-dotenv==0.19.1
+requests==2.26.0
