--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,25 @@
-# Core libraries
+# Core web framework
 Flask==2.0.1
 Flask-CORS==3.0.10
 Werkzeug==2.0.1
+Jinja2==3.0.3
+itsdangerous==2.0.1
+click==8.0.3
 gunicorn==20.1.0
 
-# Audio processing - maintain all libraries
+# Audio processing
 pydub==0.25.1
 librosa==0.9.2
 numpy==1.22.3
+scipy==1.8.0
 soundfile==0.10.3.post1
+scikit-learn==1.0.2
 mutagen==1.45.1
 
 # File handling
-Pillow==9.0.1
+Pillow==9.5.0
 
 # Utilities
 python-dotenv==0.19.1
-requests==2.26.0
+requests==2.31.0
+urllib3<2.0.0
