--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,29 +1,33 @@
 # Core web framework
-Flask==2.0.1
-Flask-CORS==3.0.10
-Werkzeug==2.0.1
-Jinja2==3.0.3
-itsdangerous==2.0.1
-click==8.0.3
-gunicorn==20.1.0
+Flask==2.3.3
+Flask-CORS==4.0.0
+Werkzeug==2.3.7
+Jinja2==3.1.2
+itsdangerous==2.1.2
+click==8.1.7
+gunicorn==21.2.0
 
-# Audio processing
+# Audio processing (core dependencies)
 pydub==0.25.1
-librosa==0.9.2
-numpy==1.22.3
-scipy==1.8.0
-soundfile==0.10.3.post1
-scikit-learn==1.0.2
-mutagen==1.45.1
-mido>=1.2.10  # MIDI file processing
+librosa==0.10.1
+numpy==1.24.4
+scipy==1.11.4
+soundfile==0.12.1
+scikit-learn==1.3.2
+mutagen==1.47.0
+mido>=1.3.0  # MIDI file processing
+
+# File handling
+Pillow==10.1.0
+
+# Utilities
+python-dotenv==1.0.0
+requests==2.31.0
+urllib3>=1.26.0,<3.0.0
+
+# Analysis and testing dependencies (optional but used in test files)
+pandas>=2.0.0  # Used in analyze_notes.py
+
 # Optional advanced audio analysis (may require special installation)
 # madmom>=0.16.1
 # spleeter>=2.3.0
-
-# File handling
-Pillow==9.5.0
-
-# Utilities
-python-dotenv==0.19.1
-requests==2.31.0
-urllib3<2.0.0
